# pyemap

./: .lgtm.yml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  environment.yml  example.py  full_report.txt  pypi.md  pyproject.toml  setup.cfg  setup.py  test3.py
.github/: CONTRIBUTING.md
.github/workflows/: codeql.yml  intel-mac.yml  mac.yml  nodeps.yml  python-package-conda.yml  ubuntu.yml
devtools/: README.md
docs/: Makefile  README.md  algorithms.rst  bibliography.rst  cite.rst  conf.py  credits.rst  emap.rst  index.rst  install.rst  make.bat  parse.rst  process.rst  reference.rst  requirements.txt  tutorial.rst
docs/algorithms/: algorithms.rst  chemical_structures.rst  custom_residues.rst  eta_moieties.rst  graph_drawing.rst  shortest_paths.rst  smiles.rst  surface_exposed.rst
docs/algorithms/autosummary/: pyemap.custom_residues.find_conjugated_systems.rst  pyemap.custom_residues.process_custom_residues.rst  pyemap.process_data.calculate_asa.rst  pyemap.process_data.calculate_residue_depth.rst  pyemap.process_data.closest_atom_dmatrix.rst  pyemap.process_data.com_dmatrix.rst  pyemap.process_data.create_graph.rst  pyemap.process_data.pathways_model.rst  pyemap.process_data.pathways_model_thrspace_penalty_COM.rst  pyemap.shortest_paths.dijkstras_shortest_paths.rst  pyemap.shortest_paths.yens_shortest_paths.rst  pyemap.smiles.buildSmiles.rst  pyemap.smiles.cleanup_bonding.rst  pyemap.smiles.getClosures.rst  pyemap.smiles.getSimpleSmiles.rst  pyemap.smiles.remove_side_chains.rst  pyemap.structures.buildSmarts.rst  pyemap.structures.cleanup_bonding.rst  pyemap.structures.getClosures.rst  pyemap.structures.getSimpleSmarts.rst  pyemap.structures.remove_side_chains.rst
docs/analysis/: analysis.rst  parse.rst  pathways.rst  process.rst
docs/analysis/autosummary/: pyemap.parser.fetch_and_parse.rst  pyemap.parser.parse.rst  pyemap.pathway_analysis.find_paths.rst  pyemap.process_data.process.rst
docs/autosummary/: pyemap.fetch_and_parse.rst  pyemap.parse.rst
docs/common_paths/: FrequentSubgraph.rst  PDBGroup.rst  common_paths.rst
docs/data_structures/: ShortestPath.rst  branch.rst  emap.rst
docs/graph_mining/: graph_mining.rst  usage.rst
docs/graph_mining/algorithms/: algorithms.rst  classification.rst  clustering.rst  mining.rst
docs/graph_mining/data_structures/: PDBGroup.rst  SubgraphPattern.rst  data_structures.rst
docs/graph_mining/usage/: usage.rst
docs/single_protein/: single_protein.rst
docs/single_protein/algorithms/: algorithms.rst  eta_moieties.rst  graph_drawing.rst  shortest_paths.rst  surface_exposed.rst
docs/single_protein/data_structures/: ShortestPath.rst  branch.rst  (+2 more)
docs/tutorial/: mining.rst  single_protein.rst  tutorial.rst
examples/: MiningTutorial.ipynb  Tutorial.ipynb  cryptochrome_test.py  example.py  filtered.py  find_pattern.py  flavoprotein_test.py  flavoproteins.txt  mine_patterns.py  single_graph.py
pyemap/: FF_emap.py  SASA_data.py  __init__.py  _version.py  ak_test.py  aminoacids.py  custom_residues.py  data.py  dijkstras.py  emap.py  parse.py  parser.py  pathway_analysis.py  pathways.py  png2svg.py  process_data.py  pyemap_exceptions.py  shortest_paths.py  smiles.py  structures.py  utils.py
pyemap/common_paths/: __init__.py  find_subgraph.py  frequent_subgraph.py  protein_group.py  test.py  utils.py
pyemap/coupling/: __init__.py  compute_couplings.py  full.pkl  full_weights.index  his.molden  his_mo.npy  phe.molden  phe_mo.npy  qc_data.py  trp.molden  trp_mo.npy  tyr.molden  tyr_mo.npy
pyemap/data/: site_energies.csv
pyemap/graph_mining/: __init__.py  frequent_subgraph.py  protein_group.py  utils.py
pyemap/tests/: __init__.py  pytest.ini  test_emap.py  test_mining.py  test_parameters.py  test_parser.py  test_pathways.py  test_pyemap.py
(+7 files in other folders)
