[metadata]
name = pyemap
version = 2.0.0
author = James Gayvert
author_email = jrg444@gmail.com
description = PyeMap: A python package for automatic identification of electron and hole transfer pathways in proteins.
long_description = file: pypi.md
long_description_content_type = text/markdown
license = BSD 3-Clause
url = https://github.com/gayverjr/pyemap/
project_urls =
    Bug Tracker = https://github.com/gayverjr/pyemap/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires= numpy 
                  networkx 
                  biopython 
                  scipy 
                  pillow 
                  pygraphviz 
                  gspan_mining 
                  requests 
                  cairosvg 
                  pysmiles
include_package_data = True